styling to light

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,12 +2,13 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #353730;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-custom-bg: #EEEEE8;
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
