--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@
   --color-foreground: var(--foreground);
   --color-custom-bg: #EEEEE8;
   --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-mono: var(--font-jetbrains-mono);
 }
 
 @media (prefers-color-scheme: dark) {
